fix build script

--- a/build
+++ b/build
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-if grep "!REPLACE_ME" src.js > /dev/null; then
+if grep "REPLACE_ME" src.js > /dev/null; then
     echo "\nYou have not entered passwords for the SysOp and/or DB Users in src.js. Correct the file and try again.\n";
     exit 1
 fi
